Minor style fixes, fixed navbar on mobile

--- a/src/styles/Common.scss
+++ b/src/styles/Common.scss
@@ -1,9 +1,12 @@
 @import "../../node_modules/bootswatch/dist/cyborg/_variables.scss";
 @import "_settings.font-sizes.scss";
 @import "_tools.alignment.scss";
+@import "_tools.flexbox.scss";
 @import "_tools.functions.scss";
 @import "_tools.responsive.scss";
 @import "_settings.config.scss";
+@import "_trumps.align.scss";
+@import "_trumps.flex.scss";
 @import "_trumps.margin.scss";
 @import "_trumps.padding.scss";
 @import "_trumps.text-align.scss";
@@ -11,20 +14,20 @@
 
 $font: "Futura PT", Helvetica, sans-serif;
 p {
-    font-family: $font;
-    font-size: 1.5em;
-    margin: 0;
+  font-family: $font;
+  font-size: 1.5em;
+  margin: 0;
 }
 
 h3 {
-    font-family: $font;
-    font-weight: 600;
+  font-family: $font;
+  font-weight: 600;
 }
 
 small {
-    font-size: rem(14px);
+  font-size: rem(14px);
 }
 
 em {
-    font-family: "Futura PT Condensed", "Futura PT", Helvetica, sans-serif;
+  font-family: "Futura PT Condensed", "Futura PT", Helvetica, sans-serif;
 }
